--- a/sql-todo-vs-mac.csproj
+++ b/sql-todo-vs-mac.csproj
@@ -17,15 +17,18 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="1.1.3" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Content Remove="appsettings.Development.json" />
-  </ItemGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
+    <StartAction>Project</StartAction>
+    <EnvironmentVariables>
+      <Variable name="ASPNETCORE_ENVIRONMENT" value="Development" xmlns="" />
+    </EnvironmentVariables>
+    <ApplicationURL>http://localhost:50000</ApplicationURL>
+    <LaunchUrl>http://localhost:50000/api/Persons</LaunchUrl>
+  </PropertyGroup>
+
   <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="Controllers\ValuesController.cs" />
   </ItemGroup>
 </Project>
